--- a/db/360/SceSblGcAuthMgr.yml
+++ b/db/360/SceSblGcAuthMgr.yml
@@ -8,6 +8,7 @@ modules:
         nid: 0x1926B182
         kernel: true
         functions:
+          ksceSblGcAuthMgrDrmBBCheckCartHash: 0x22FD5D23
           ksceSblGcAuthMgrDrmBBClearCartSecret: 0xBB451E83
           ksceSblGcAuthMgrDrmBBGetCartSecret: 0xBB70DDC0
       SceSblGcAuthMgrGcAuthForDriver:
